--- a/.github/workflows/mipsle-cloudflared.yaml
+++ b/.github/workflows/mipsle-cloudflared.yaml
@@ -20,15 +20,13 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.cf }}
 
       - name: Checkout new tags to branches
         id: checkout-tags
         uses: chachako/checkout-tags@v1
         with:
           base: cloudflare/cloudflared
-          token: ${{ secrets.cf }}
+          token: ${{ github.token }}
           overwrite: false
 
       - name: Push all new branches
@@ -91,7 +89,7 @@ jobs:
           WITH_V: true
           DEFAULT_BRANCH: main
           RELEASE_BRANCHES: main
-          GITHUB_TOKEN: ${{ secrets.cf }}
+          GITHUB_TOKEN: ${{ github.token }}
 
       - name: Release
         uses: softprops/action-gh-release@v2
