--- a/.github/workflows/mipsle-cloudflared.yaml
+++ b/.github/workflows/mipsle-cloudflared.yaml
@@ -5,10 +5,10 @@ name: Update-cloudflared
 # Controls when the workflow will run
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 0 * * 0'
    # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  push:
+  # push:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
