--- a/.github/workflows/mipsle-cloudflared.yaml
+++ b/.github/workflows/mipsle-cloudflared.yaml
@@ -8,7 +8,7 @@ on:
     - cron: '0 0 * * 0'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  # push:
+  push:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -56,7 +56,7 @@ jobs:
             ${{ runner.os }}-cf-go-
 
       - name: Build cf-go
-        if: ${{ steps.checkout-tags.outputs.up-to-date && steps.cache-cf-go.outputs.cache-hit != 'true' }}
+        if: ${{ steps.checkout-tags.outputs.up-to-date && steps.cache-cf-go-build.outputs.cache-hit != 'true' }}
         run: |
           cd go/src
           ./make.bash
