--- a/.github/workflows/mipsle-cloudflared.yaml
+++ b/.github/workflows/mipsle-cloudflared.yaml
@@ -1,16 +1,24 @@
+# This is a basic workflow to help you get started with Actions
+
 name: Update-cloudflared
 
+# Controls when the workflow will run
 on:
   schedule:
     - cron: '0 0 * * 0'
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  push:
+  # push:
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   check-update:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
       - name: Checkout new tags to branches
@@ -21,6 +29,7 @@ jobs:
           token: ${{ github.token }}
           overwrite: false
 
+      # Cache Go dependencies
       - name: Cache Go modules
         uses: actions/cache@v3
         with:
@@ -28,55 +37,50 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-
-      - name: Build cf-go
-        if: ${{ steps.checkout-tags.outputs.up-to-date }}
+      # Get the last commit ID of cloudflare/go
+      - name: Get last commit ID of cloudflare/go
+        id: get_commit_id
         run: |
           git clone https://github.com/cloudflare/go --depth 1
+          commit_id=$(git -C go rev-parse HEAD)
+          echo "::set-output name=commit_id::$commit_id"
+      # Cache cf-go build result
+      - name: Cache cf-go build
+        uses: actions/cache@v3
+        with:
+          path: go/bin
+          key: ${{ runner.os }}-cf-go-${{ steps.get_commit_id.outputs.commit_id }}
+          restore-keys: |
+            ${{ runner.os }}-cf-go-
+      - name: Build cf-go
+        if: ${{ steps.checkout-tags.outputs.up-to-date && steps.cache-cf-go.outputs.cache-hit != 'true' }}
+        run: |
           cd go/src
           ./make.bash
           chmod +x ../bin/go
-
-      - name: Build cloudflared
+      - name: build mipsle-cloudflared
         if: ${{ steps.checkout-tags.outputs.up-to-date }}
         run: |
+          cd /home/runner/work/cloudflared/cloudflared
           git clone https://github.com/cloudflare/cloudflared --depth 1
           cd cloudflared/cmd/cloudflared
-          targets=(
-            "arm64_cortex-a53" "arm64_cortex-a72" "arm64_generic"
-            "arc_archs"
-            "arm_arm1176jzf-s_vfp" "arm_arm926ej-s" "arm_cortex-a15_neon-vfpv4" "arm_cortex-a5_vfpv4"
-            "arm_cortex-a7" "arm_cortex-a7_neon-vfpv4" "arm_cortex-a7_vfpv4" "arm_cortex-a8_vfpv3"
-            "arm_cortex-a9" "arm_cortex-a9_neon" "arm_cortex-a9_vfpv3-d16" "arm_fa526" "arm_mpcore" "arm_xscale"
-            "i386_pentium-mmx" "i386_pentium4"
-            "mips64_octeonplus"
-            "mips_24kc" "mips_4kec" "mips_mips32"
-            "mipsel_24kc" "mipsel_24kc_24kf" "mipsel_74kc" "mipsel_mips32"
-            "powerpc_464fp" "powerpc_8540"
-            "amd64"
-          )
-          for target in "${targets[@]}"; do
-            IFS='_' read -ra parts <<< "$target"
-            GOARCH="${parts[0]}"
-            GOARM=""
-            GOMIPS=""
-            if [[ $GOARCH == "arm" ]]; then
-              GOARM="${parts[1]}"
-            elif [[ $GOARCH == "mips"* ]]; then
-              GOMIPS="${parts[1]}"
-            fi
-            if go tool dist list | grep -q "linux/$GOARCH"; then
-              CGO_ENABLED=0 GOOS=linux GOARCH=$GOARCH GOARM=$GOARM GOMIPS=$GOMIPS /home/runner/work/cloudflared/cloudflared/go/bin/go build -a -trimpath -installsuffix cgo -ldflags '-s -w -extldflags "-static"' -o cloudflared-$target
-            else
-              echo "Skipping unsupported GOOS/GOARCH pair linux/$GOARCH"
-            fi
-          done
-
-
+          CGO_ENABLED=0 GOOS=linux GOARCH=mipsle GOMIPS=softfloat /home/runner/work/cloudflared/cloudflared/go/bin/go build -a -trimpath -installsuffix cgo -ldflags '-s -w -extldflags "-static"' .
+          cd /home/runner/work/cloudflared/cloudflared
       - uses: actions/upload-artifact@v4
         with:
+          # Name of the artifact to upload.
+          # Optional. Default is 'artifact'
           name: cloudflared
-          path: /home/runner/work/cloudflared/cloudflared/cloudflared/cmd/cloudflared/cloudflared-*
+
+          # A file, directory or wildcard pattern that describes what to upload
+          # Required.
+          path: /home/runner/work/cloudflared/cloudflared/cloudflared/cmd/cloudflared/cloudflared
+
+
+          # The level of compression for Zlib to be applied to the artifact archive.
+          # The value can range from 0 to 9.
+          # For large files that are not easily compressed, a value of 0 is recommended for significantly faster uploads.
+          # Optional. Default is '6'
           compression-level: 0
 
       - name: Get latest tag
@@ -95,6 +99,6 @@ jobs:
         with:
           make_latest: "true"
           tag_name: ${{ steps.latest_tag.outputs.new_tag }}
-          files: /home/runner/work/cloudflared/cloudflared/cloudflared/cmd/cloudflared/cloudflared-*
+          files: /home/runner/work/cloudflared/cloudflared/cloudflared/cmd/cloudflared/cloudflared
           token: ${{ github.token }}
           fail_on_unmatched_files: false
