--- a/.github/workflows/BuildAll.yml
+++ b/.github/workflows/BuildAll.yml
@@ -12,8 +12,13 @@ jobs:
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
+    steps:        
       - uses: actions/checkout@v3
+      - name: Setup Go environment
+        uses: actions/setup-go@v5.0.1
+        with:
+          # Set this option to true if you want the action to always check for the latest available version that satisfies the version spec
+          check-latest: true 
 
       - name: Checkout new tags to branches
         id: checkout-tags
