--- a/.github/workflows/BuildAll.yml
+++ b/.github/workflows/BuildAll.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/setup-go@v5.0.1
         with:
           # Set this option to true if you want the action to always check for the latest available version that satisfies the version spec
+          go-version: '1.22'
           check-latest: true 
 
       - name: Checkout new tags to branches
